Adapted new changes for Labels in Master and Details Pages

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,22 +9,22 @@ appDescription=Sample Master App
 #~~~ Master View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Master view title with placeholder for the number of items
-masterTitleCount=<SalesOrderSet> ({0})
+masterTitleCount= Sales Order List ({0})
 
 #XTOL: Tooltip for the search field
-masterSearchTooltip=Enter an <SalesOrderSet> name or a part of it.
+masterSearchTooltip=Enter an  Sales Order List name or a part of it.
 
 #XBLI: text for a list with no data
-masterListNoDataText=No <SalesOrderSetPlural> are currently available
+masterListNoDataText=No  Sales Order Listlural> are currently available
 
 #XBLI: text for a list with no data with filter or search
-masterListNoDataWithFilterOrSearchText=No matching <SalesOrderSetPlural> found
+masterListNoDataWithFilterOrSearchText=No matching  Sales Order Listlural> found
 
 
 #~~~ Detail View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Detail view title
-detailTitle=<SalesOrderSet>
+detailTitle= Sales Order List
 
 #XTOL: Icon Tab Bar Info
 detailIconTabBarInfo=Info
@@ -33,13 +33,13 @@ detailIconTabBarInfo=Info
 detailIconTabBarAttachments=Attachments
 
 #XBLI: Text for the ToLineItems table with no data
-detailLineItemTableNoDataText=No <ToLineItemsPlural>
+detailLineItemTableNoDataText=No Sales Line Items
 
 #XTIT: Title of the ToLineItems table
-detailLineItemTableHeading=<ToLineItemsPlural>
+detailLineItemTableHeading=Sales Line Items
 
 #XTIT: Title of the ToLineItems table
-detailLineItemTableHeadingCount=<ToLineItemsPlural> ({0})
+detailLineItemTableHeadingCount=Sales Line Items ({0})
 
 #XGRP: Title for the ProductID column in the ToLineItems table
 detailLineItemTableIDColumn=<FirstColumnName>
@@ -61,11 +61,11 @@ shareSendEmailObjectMessage=<Email body PLEASE REPLACE ACCORDING TO YOUR USE CAS
 #XTIT: Not found view title
 notFoundTitle=Not Found
 
-#YMSG: The SalesOrderSet not found text is displayed when there is no SalesOrderSet with this id
-noObjectFoundText=This <SalesOrderSet> is not available
+#YMSG: The Sales Order Listnot found text is displayed when there is no Sales Order Listwith this id
+noObjectFoundText=This  Sales Order List is not available
 
-#YMSG: The SalesOrderSet not available text is displayed when there is no data when starting the app
-noObjectsAvailableText=No <SalesOrderSetPlural> are currently available
+#YMSG: The Sales Order Listnot available text is displayed when there is no data when starting the app
+noObjectsAvailableText=No  Sales Order Listlural> are currently available
 
 #YMSG: The not found text is displayed when there was an error loading the resource (404 error)
 notFoundText=The requested resource was not found
@@ -73,7 +73,7 @@ notFoundText=The requested resource was not found
 #~~~ Not Available View ~~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Master view title
-notAvailableViewTitle=<SalesOrderSet>
+notAvailableViewTitle= Sales Order List
 
 #~~~ Error Handling ~~~~~~~~~~~~~~~~~~~~~~~
 
